fix not showing userInfoLB

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -83,7 +83,7 @@ input:focus, .button:focus {outline: 0;border-color: orange;}
 /* user input */
 #user_input_form{position: absolute;bottom: 0;left: 0;width: 100%;height: 50px;}
   #user_input_wrapper{position: relative;padding: 0 180px 0 150px;width: 100%;height: 50px;}
-    #user_ico_field{position: absolute;top: 0;left: 0;overflow: hidden;width: 130px;height: 50px;}
+    #user_ico_field{position: absolute;top: 0;left: 0;width: 130px;height: 50px;}
       #user_ico{padding: 10px 0;width: 100%;height: 50px;line-height: 22px;text-align: center;}
       #user_info_lb{display: none;position: absolute;left: 10px;bottom: 60px;border: 4px solid #333;padding: 10px 20px;width: 400px;height: 110px;background: #eee;}
         #user_info_lb .wrapper{position: relative;padding: 30px 0 20px;width: 100%;height: 100%;}
